# cosmic-grackle

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release-binaries.yml
mcpb/: manifest.json
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  install-binary.sh
plugin/skills/macos-contacts/: SKILL.md
src/: contact_store.rs  error.rs  keys.rs  lib.rs  main.rs  models.rs  server.rs
