[package]
name = "tashkent"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "macOS Contacts MCP server"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
objc2 = "0.6"
objc2-contacts = { version = "0.3", features = [
    "CNContact",
    "CNMutableContact",
    "CNContactStore",
    "CNContactFetchRequest",
    "CNFetchRequest",
    "CNLabeledValue",
    "CNPhoneNumber",
    "CNPostalAddress",
    "CNSaveRequest",
    "CNGroup",
    "CNContainer",
    "block2",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSString",
    "NSError",
    "NSPredicate",
    "NSObjCRuntime",
    "NSCalendar",
] }
block2 = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
